[PW-7716-extended] Removing javax-annotation dependency (#950)
* removed jackson depedency and unused dependencies from pom.xml

* cleanup

* whitespace

* Changed byte array adapter to use existing dependency

* Small fix for json files

* Transfers was not in the makefile models list..

* removed javax.annotation dependency